--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
-    "com.ionic.keyboard"
+    "com.ionic.keyboard",
+    {
+      "locator": "https://github.com/apache/cordova-plugin-whitelist.git",
+      "id": "plugin.google.maps"
+    },
+    "cordova-plugin-geolocation"
   ],
   "cordovaPlatforms": [
     "android"
