--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
       "locator": "https://github.com/apache/cordova-plugin-whitelist.git",
       "id": "plugin.google.maps"
     },
-    "cordova-plugin-geolocation"
+    "cordova-plugin-geolocation",
+    "cordova-plugin-whitelist"
   ],
   "cordovaPlatforms": [
     "android"
